# LOOBins

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: new_loobin.yml
.github/workflows/: auto-release.yml  build_pyloobins.yml  bump.yml  deploy-web.yml  pre_release.yml  release.yml  validate_loobin_schema.yml  validate_loobins.yml
Entitlements/: allow_dyld_environment_variables_entitlement.yml  get_task_allow.yml
LOOBins/: GetFileInfo.yml  SetFile.yml  caffeinate.yml  chflags.yml  codesign.yml  csrutil.yml  defaults.yml  disown.yml  ditto.yml  dns-sd.yml  dscacheutil.yml  dscl.yml  dsconfigad.yml  dsexport.yml  funzip.yml  hdiutil.yml  installer.yml  ioreg.yml  kextstat.yml  killall.yml  last.yml  launchctl.yml  log.yml  lsappinfo.yml  lsbom.yml  lsregister.yml  mdfind.yml  mdls.yml  mktemp.yml  nc.yml  networksetup.yml  notifyutil.yml  nscurl.yml  nvram.yml  odutil.yml  open.yml  osacompile.yml  osascript-clipboard.yml  osascript.yml  pbpaste.yml  (+31 more)
docs/: schema.md  tags.md
docs/pyloobins/: README.md
py_loobas/: models.py
py_loobins/: models.py
pyloobins/: cli.py  util.py
src/: loobins_stix.json
src/pyloobins/: cli.py  models.py  stix.py  util.py
src/pyloobins/templates/: entitlement.md.j2  loobin.md.j2
tests/: test_data.py  test_models.py  test_stix.py  test_util.py
web/: astro.config.mjs  package-lock.json  package.json
web/public/: robots.txt
web/src/: content.config.ts
web/src/components/: Footer.astro  LOOBinCard.astro  Navbar.astro  SearchWidget.astro  TacticBadge.astro  TagBadge.astro  UseCaseBlock.astro
web/src/layouts/: BaseLayout.astro
web/src/pages/: about.astro  index.astro
web/src/pages/binaries/: [slug].astro  index.astro
web/src/pages/tactics/: [tactic].astro  index.astro
web/src/pages/tags/: [tag].astro  index.astro
web/src/styles/: global.css
web/src/utils/: helpers.ts
