[tool.poetry]
name = "PyLOOBins"
version = "0.1.3"
description = "Python package for managing the LOOBins model and schema."
authors = ["infosecB <brendan@infosecb.com>"]
readme = "README.md"
packages = [{include = "pyloobins", from = "src"}]
include = ["LOOBins/*.yml"]
homepage = "https://loobins.io/"
repository = "https://github.com/infosecB/LOOBins"
keywords = ["cybersecurity", "cli", "lol"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.5"
pyyaml = "^6.0"
click = "^8.1.3"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"
pre-commit = "^3.2.2"

[tool.poetry.scripts]
pyloobins = 'pyloobins.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable=[
  'no-name-in-module',
  'too-few-public-methods'
]
