[tool.poetry]
name = "PyLOOBins"
version = "2.0.1"
description = "Python package for managing the LOOBins model and schema."
authors = ["infosecB <brendan@infosecb.com>", "0xv1n <0xv1n@protonmail.com>"]
readme = "docs/pyloobins/README.md"
packages = [{ include = "pyloobins", from = "src" }]
include = ["LOOBins/*.yml"]
homepage = "https://loobins.io/"
repository = "https://github.com/infosecB/LOOBins"
keywords = ["cybersecurity", "cli", "lol"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2"
pyyaml = "^6.0"
click = "^8.1.3"
jinja2 = "^3.1.2"
stix2 = "^3.0.1"
polyfactory = "^2.18.0"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"
pre-commit = "^3.2.2"
pytest = "^7.3.1"
tox = "^4.5.1"
isort = "^5.12.0"

[tool.poetry.scripts]
pyloobins = 'pyloobins.cli:cli'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable = ['no-name-in-module', 'too-few-public-methods']

[tool.tox]
legacy_tox_ini = """
  [tox]
  env_list =
      py38,py39,py310,py311,py312
  minversion = 4.5.1

  [testenv]
  description = run the tests with pytest
  package = wheel
  wheel_build_env = .pkg
  deps =
      pytest>=6
  commands =
      pytest {tty:--color=yes} {posargs}
"""
