[project]
name = "PyLOOBins"
version = "2.0.9"
description = "Python package for managing the LOOBins model and schema."
authors = [
    { name = "infosecB", email = "brendan@infosecb.com" },
    { name = "0xv1n", email = "0xv1n@protonmail.com" },
]
readme = "docs/pyloobins/README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.8"
keywords = ["cybersecurity", "cli", "lol"]
dependencies = [
    "pydantic>=2,<3",
    "pyyaml>=6.0,<7",
    "click>=8.1.3,<9",
    "jinja2>=3.1.2,<4",
    "stix2>=3.0.1,<4",
    "polyfactory>=2.18.0,<3",
]

[project.urls]
Homepage = "https://loobins.io/"
Repository = "https://github.com/infosecB/LOOBins"

[project.scripts]
pyloobins = "pyloobins.cli:cli"

[dependency-groups]
dev = [
    "pylint>=2.17.0",
    "black>=23.1.0",
    "pre-commit>=3.2.2",
    "pytest>=7.3.1",
    "tox>=4.5.1",
    "isort>=5.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyloobins"]

[tool.hatch.build.targets.sdist]
include = ["src/pyloobins", "LOOBins/*.yml"]

[tool.pylint.'MESSAGES CONTROL']
disable = ['no-name-in-module', 'too-few-public-methods']

[tool.tox]
legacy_tox_ini = """
  [tox]
  env_list =
      py38,py39,py310,py311,py312
  minversion = 4.5.1

  [testenv]
  description = run the tests with pytest
  package = wheel
  wheel_build_env = .pkg
  deps =
      pytest>=6
  commands =
      pytest {tty:--color=yes} {posargs}
"""
